# netray

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
packaging/: Info.plist  NeTray.icns
scripts/: bundle.sh  make_icon.py
src/: app_monitor.rs  app_rows.rs  icon.rs  main.rs  monitor.rs  tray_title.rs
