[package]
name = "netray"
version = "0.1.4"
edition = "2021"

[dependencies]
tray-icon = "0.24"
winit = "0.30"
sysinfo = "0.30"
bytesize = "1.3"
anyhow = "1.0"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSButton", "NSColor", "NSFont", "NSWindow", "NSView", "NSAttributedString", "NSMenu", "NSMenuItem", "NSParagraphStyle", "NSText", "NSResponder", "NSAppearance"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSAttributedString", "NSArray", "NSDictionary", "NSObject", "NSValue"] }